--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             <button id="close" class="close-btn"><i class="fa-solid fa-xmark"></i></button>
 
             <div class="popup-form-container">
-                <h2>Apply the Form</h2>
+                <h2>What we offer you?</h2>
                 <form method="POST" onsubmit="return contact(event)">
                     <input type="text" id="name" placeholder="Enter Your Name" required>
                     <input type="email" id="email" placeholder="Enter Your Email" required>
-                    <input type="number" id="number" placeholder="Enter Your Mobile Number" required>
-                    <textarea rows="5" id="message" placeholder="Message" required></textarea>
+                    <input type="number" id="number" placeholder="Enter Your Contact Number" required>
+                    <textarea rows="6" id="message" placeholder="Message" required></textarea>
                     <button class="submit-btn" type="submit">Submit</button>
                 </form>
             </div>
@@ -180,7 +180,7 @@
         </div> -->
     </div>
     <!------------------- about section start ------------------>
-    <div class="aboutus-page">
+    <div class="aboutus-page reveal">
         <div class="aboutus-container container">
             <div class="aboutus-boxes">
                 <div class="aboutus-para">
@@ -226,12 +226,12 @@
 
     <!-- -----------------------about section end --------------------------- -->
     <!-- --------------our services page section start ----------->
-    <div class="our-services-page">
+    <div class="our-services-page ">
         <div class="ourservices-container container">
             <div class="ourservices-boxes">
                 <h4 style="color: white;">Our Services</h4>
                 <h5 class="buildhead" style="color: white;">Build your Brand with befhue.</h5>
-                <div class="ourservices-details  ">
+                <div class="ourservices-details reveal ">
                     <div class="stroked-numbers">
                         <div class="stroked-number-images">
                             <img src="assets/images/home/1-02.png" />
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <hr class="ourservice-horizondalrole">
-                <div class="ourservices-details">
+                <div class="ourservices-details reveal">
                     <div class="stroked-numbers">
                         <div class="stroked-number-images">
                             <img src="assets/images/home/2-02.png" />
@@ -265,7 +265,7 @@
                 </div>
                 <hr class="ourservice-horizondalrole">
 
-                <div class="ourservices-details">
+                <div class="ourservices-details reveal">
                     <div class="stroked-numbers">
                         <div class="stroked-number-images">
                             <img src="assets/images/home/3-02.png" />
@@ -282,7 +282,7 @@
                     </div>
                 </div>
                 <hr class="ourservice-horizondalrole">
-                <div class="ourservices-details">
+                <div class="ourservices-details reveal">
                     <div class="stroked-numbers">
                         <div class="stroked-number-images">
                             <img src="assets/images/home/4-02.png" />
@@ -300,7 +300,7 @@
                 </div>
                 <hr class="ourservice-horizondalrole">
 
-                <div class="ourservices-details">
+                <div class="ourservices-details reveal">
                     <div class="stroked-numbers">
                         <div class="stroked-number-images">
                             <img src="assets/images/home/5-02.png" />
@@ -317,7 +317,7 @@
                     </div>
                 </div>
                 <hr class="ourservice-horizondalrole">
-                <div class="ourservices-details">
+                <div class="ourservices-details reveal">
                     <div class="stroked-numbers">
                         <div class="stroked-number-images">
                             <img src="assets/images/home/6-02.png" />
@@ -334,7 +334,7 @@
                     </div>
                 </div>
                 <hr class="ourservice-horizondalrole">
-                <div class="ourservices-details">
+                <div class="ourservices-details reveal">
                     <div class="stroked-numbers">
                         <div class="stroked-number-images">
                             <img src="assets/images/home/7-02.png" />
@@ -358,7 +358,7 @@
     <!-------------- our service section end----------------------- -->
 
     <!-- /////////////////////////counter section end/////////////////// -->
-    <div class="editing-company-section">
+    <div class="editing-company-section reveal">
         <div class="editing-company-container container">
             <div class="editing-company-boxes">
                 <div class="editing-company-images">
@@ -447,14 +447,14 @@
                         </div>
                     </div>
                     <hr class="tick">
-                    <button class="button"><strong><a href="contact.html"
-                                style="color: white; text-decoration: none;">Start A Project</a></strong> </button>
+                    <button class="button enquiry3" strong><a href="#"
+                            style="color: white; text-decoration: none;">Start A Project</a></strong> </button>
                 </div>
             </div>
         </div>
     </div>
     <!---------------------------- iamge gallery hard winning agency section start------------------- -->
-    <div class="about-academy">
+    <div class="about-academy reveal">
 
 
 
@@ -480,7 +480,7 @@
 
 
                     <div class="programe-image">
-                        <img src="assets/images/home/14444-05.png">
+                        <img src="assets/images/home/5-05.png">
                         <div class="programe-image-card">
                             <h6>Manam Millers </h6>
                             <p>
@@ -568,7 +568,7 @@
     </div>
     <!-- loop video end  -->
     <!-------------------- guaranteed section start-------------------------->
-    <div class="guaranteed-page-section">
+    <div class="guaranteed-page-section reveal">
         <div class="guaranteedpage-container ">
             <div class="guaranteed-boxes">
                 <div class="guaranteed-para">
@@ -586,7 +586,7 @@
 
 
                     <div class="guaranteed-button">
-                        <button class="button-guaranteed"><a href="contact.html"
+                        <button class="button-guaranteed enquiry2"><a href="#"
                                 style="color: #ff004f; text-decoration: none;">START A PROJECT</a></button>
                     </div>
                     <div class="guaranteed-images-img">
@@ -600,7 +600,7 @@
 
     <!-- /////////////about our Academy/// -->
     <!------------------- testimonial section start--------------->
-    <div class="testimonial-section">
+    <div class="testimonial-section reveal">
         <div class="testimonialsection-container ">
             <div class="testimonialsection-boxes">
                 <div class="testimonialsection-review">
@@ -666,7 +666,7 @@
     </div>
 
     <!-- logo slide section start  -->
-    <div class="country-slider " style="background-color: #ff004f;">
+    <div class="country-slider reveal" style="background-color: #ff004f;">
         <div class="owl-carousel owl-carousel-testimonial owl-theme owl-loaded">
             <div class="owl-stage-outer">
                 <div class="owl-stage">
@@ -701,7 +701,7 @@
 
     <!-- footer section start -->
     <footer>
-        <div class="footer-communicate">
+        <div class="footer-communicate reveal">
             <h3 style="color: white;">About befhue</h3>
             <p>we’re your go to graphic design agency, turning your brand’s ideas into beautiful visual experiences. We
                 specialise in logo design, brand identity, web design, packaging design and digital marketing.</p>
@@ -894,41 +894,41 @@
     </script>
 
 
-<script>
-    function contact(event) {
-        // Prevent the default form submission behavior
-        event.preventDefault();
+    <script>
+        function contact(event) {
+            // Prevent the default form submission behavior
+            event.preventDefault();
 
-        // Retrieve input values
-        var name = document.getElementById("name").value;
-        var email = document.getElementById("email").value;
-        var number = document.getElementById("number").value;
-        var message = document.getElementById("message").value;
+            // Retrieve input values
+            var name = document.getElementById("name").value;
+            var email = document.getElementById("email").value;
+            var number = document.getElementById("number").value;
+            var message = document.getElementById("message").value;
 
-        // Validate fields
-        if (!name || !email || !number || !message) {
-           
-            return false; // Prevent further action
-            alert("Enter All Fields");
+            // Validate fields
+            if (!name || !email || !number || !message) {
+
+                return false; // Prevent further action
+                alert("Enter All Fields");
+            }
+
+            // Format the message content
+            var formattedMessage = encodeURIComponent(
+                "Name: " + name + "\n" +
+                "Email: " + email + "\n" +
+                "Mobile Number: +" + number + "\n" +
+                "Message: " + message
+            );
+
+            // Construct the WhatsApp URL
+            var url = "https://wa.me/+919342470592?text=" + formattedMessage;
+
+            // Open the WhatsApp URL in a new tab/window
+            window.open(url, '_blank');
+
+            return false; // Prevent form submission
         }
-
-        // Format the message content
-        var formattedMessage = encodeURIComponent(
-            "Name: " + name + "\n" +
-            "Email: " + email + "\n" +
-            "Mobile Number: +" + number + "\n" +
-            "Message: " + message
-        );
-
-        // Construct the WhatsApp URL
-        var url = "https://wa.me/+919342470592?text=" + formattedMessage;
-
-        // Open the WhatsApp URL in a new tab/window
-        window.open(url, '_blank');
-
-        return false; // Prevent form submission
-    }
-</script>
+    </script>
 
 
 
