--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
 
     </div>
     <!------------------- about section start ------------------>
-    <div class="aboutus-page">
+    <div class="aboutus-page reveal">
         <div class="aboutus-container container">
             <div class="aboutus-boxes">
                 <div class="aboutus-images">
@@ -213,7 +213,7 @@
     <!-- -----------------------about section end --------------------------- -->
 
     <!-- ---------vision mission goal section start ------------------>
-    <div class="vision-mission-section">
+    <div class="vision-mission-section reveal">
         <div class="vision-mission-container container">
             <div class="vision-mission-boxes">
                 <h5 style="color:#303030;">About befhue</h5>
@@ -276,7 +276,7 @@
 
 <!-- /////////////////////////counter section end/////////////////// -->
   <!------------------- testimonial section start--------------->
-  <div class="testimonial-section">
+  <div class="testimonial-section reveal">
     <div class="testimonialsection-container ">
         <div class="testimonialsection-boxes">
             <div class="testimonialsection-review">
@@ -335,7 +335,7 @@
 <!-- TESTIMONIAL SECTION END  -->
  <!-- footer section start -->
  <footer>
-    <div class="footer-communicate">
+    <div class="footer-communicate reveal">
         <h3 style="color: white;">About befhue</h3>
         <p>we’re your go to graphic design agency, turning your brand’s ideas into beautiful visual experiences. We
             specialise in logo design, brand identity, web design, packaging design and digital marketing.</p>
