--- a/service.html
+++ b/service.html
@@ -174,7 +174,7 @@
     </div>
 
     <!--////////////////////// Few Of Our Clients Start//////////////////////// -->
-    <section class="technologies-section mt-4">
+    <section class="technologies-section reveal mt-4">
         <div class="technologies-container container">
             <!-- <div class="technologies-title">
                 <h2>Technologies we <span> work with</span></h2>
