--- a/about.html
+++ b/about.html
@@ -277,7 +277,7 @@
 <!-- /////////////////////////counter section end/////////////////// -->
   <!------------------- testimonial section start--------------->
   <div class="testimonial-section reveal">
-    <div class="testimonialsection-container ">
+    <div class="testimonialsection-container container">
         <div class="testimonialsection-boxes">
             <div class="testimonialsection-review">
                 <section class="container">
@@ -326,8 +326,8 @@
                 <!-- JavaScript -->
             </div>
             <div class="testimonialsection-images">
-                <img src="assets/images/testimonial/1.jpg" />
-                <hr>
+                <img src="assets/images/home/women.png" />
+                <hr class="hr">
             </div>
         </div>
     </div>
