--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
 
     <!-- -----------------------about section end --------------------------- -->
     <!-- --------------our services page section start ----------->
-    <div class="our-services-page ">
+    <div class="our-services-page py-5 position-relative">
+        <img src="assets/images/png/backgroundeffw-05.png" class="overlay-image" alt="over">
         <div class="ourservices-container container">
             <div class="ourservices-boxes">
                 <h4 style="color: white;">Our Services</h4>
@@ -601,7 +602,7 @@
     <!-- /////////////about our Academy/// -->
     <!------------------- testimonial section start--------------->
     <div class="testimonial-section reveal">
-        <div class="testimonialsection-container ">
+        <div class="testimonialsection-container container">
             <div class="testimonialsection-boxes">
                 <div class="testimonialsection-review">
                     <section class="container">
@@ -659,7 +660,7 @@
                 </div>
                 <div class="testimonialsection-images">
                     <img src="assets/images/home/women.png" />
-                    <hr>
+                    <hr class="hr">
                 </div>
             </div>
         </div>
