--- a/service.html
+++ b/service.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <!-- fontawesome elements -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 
     <!-- Link Swiper's CSS -->
