--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
                 </div>
                 <div class="aboutus-para">
                     <h4>About Us</h4>
-                    <p>we’re your go to graphic design agency, turning your
+                     <p>We’re graphic design and video editing agency, turning your
                         brand’s ideas into beautiful visual experiences. We
                         specialise in logo design, brand identity, web design,
                         packaging design and digital marketing. Our team of graphic
@@ -185,6 +185,7 @@
                         design so it looks great and works for your business. We’re proud
                         of our quality and client satisfaction, delivering designs that speak
                         to your audience and raise your brand.
+        
 
                         <br>
                         <br>
@@ -216,7 +217,7 @@
     <div class="vision-mission-section reveal">
         <div class="vision-mission-container container">
             <div class="vision-mission-boxes">
-                <h5 style="color:#303030;">About befhue</h5>
+                <h5 style="color:#303030;">Core Values</h5>
                     <div class="about-branding">
                         <div class="about-branding-head">
                             <h5>Our Services</h5>
@@ -337,8 +338,15 @@
  <footer>
     <div class="footer-communicate reveal">
         <h3 style="color: white;">About befhue</h3>
-        <p>we’re your go to graphic design agency, turning your brand’s ideas into beautiful visual experiences. We
-            specialise in logo design, brand identity, web design, packaging design and digital marketing.</p>
+        <p>We’re graphic design and video editing agency, turning your
+            brand’s ideas into beautiful visual experiences. We
+            specialise in logo design, brand identity, web design,
+            packaging design and digital marketing. Our team of graphic
+            designers bring artistic talent and strategic thinking to every
+            design so it looks great and works for your business. We’re proud
+            of our quality and client satisfaction, delivering designs that speak
+            to your audience and raise your brand.</p>
+
 
     </div>
     <div class="footer-communicate">
@@ -486,7 +494,7 @@ var swiper = new Swiper(".mySwiper", {
         var formattedMessage = encodeURIComponent(
             "Name: " + name + "\n" +
             "Email: " + email + "\n" +
-            "Mobile Number: +" + number + "\n" +
+            "Mobile Number: " + number + "\n" +
             "Message: " + message
         );
 
