--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="aboutus-boxes">
                 <div class="aboutus-para">
                     <h4>About Us</h4>
-                    <p>we’re your go to graphic design agency, turning your
+                    <p>We’re graphic design and video editing agency, turning your
                         brand’s ideas into beautiful visual experiences. We
                         specialise in logo design, brand identity, web design,
                         packaging design and digital marketing. Our team of graphic
@@ -309,8 +309,8 @@
 
                     </div>
                     <div class="ourservices-content">
-                        <h5>Web designs</h5>
-                        <p>Web designs: Create a stunning online presence with web design that combines beauty and
+                        <h5>Web & UI/UX designs</h5>
+                        <p> Create a stunning online presence with web design that combines beauty and
                             functionality. Our web design services focus on user experience, aesthetics, and
                             responsiveness to bring your brand to life on every device. Let's craft a website that
                             captivates and converts visitors into loyal customers.
@@ -469,7 +469,7 @@
                     <div class="programe-image">
                         <img src="assets/images/home/modern 1-01.png">
                         <div class="programe-image-card">
-                            <h6>Baking Pastry</h6>
+                            <h6>Modern Mustache</h6>
                             <p>Logo Design
                             </p>
                             <button class="button-gallery"><a href="portfolio.html"
@@ -561,10 +561,10 @@
     <!-- loop video start -->
     <div class="marquee-w">
         <div class="marquee">
-            <span></span>
+            <span><img src="assets/images/png/befhue png-05.png" alt=""><img src="assets/images/png/befhue png-05.png" alt=""><img src="assets/images/png/befhue png-05.png" alt=""><img src="assets/images/png/befhue png-05.png" alt=""></span>
         </div>
         <div class="marquee marquee2">
-            <span></span>
+            <span><img src="assets/images/png/befhue png-05.png" alt=""><img src="assets/images/png/befhue png-05.png" alt=""><img src="assets/images/png/befhue png-05.png" alt=""><img src="assets/images/png/befhue png-05.png" alt=""></span>
         </div>
     </div>
     <!-- loop video end  -->
@@ -704,8 +704,14 @@
     <footer>
         <div class="footer-communicate reveal">
             <h3 style="color: white;">About befhue</h3>
-            <p>we’re your go to graphic design agency, turning your brand’s ideas into beautiful visual experiences. We
-                specialise in logo design, brand identity, web design, packaging design and digital marketing.</p>
+            <p>We’re graphic design and video editing agency, turning your
+                brand’s ideas into beautiful visual experiences. We
+                specialise in logo design, brand identity, web design,
+                packaging design and digital marketing. Our team of graphic
+                designers bring artistic talent and strategic thinking to every
+                design so it looks great and works for your business. We’re proud
+                of our quality and client satisfaction, delivering designs that speak
+                to your audience and raise your brand.</p>
 
         </div>
         <div class="footer-communicate">
@@ -917,7 +923,7 @@
             var formattedMessage = encodeURIComponent(
                 "Name: " + name + "\n" +
                 "Email: " + email + "\n" +
-                "Mobile Number: +" + number + "\n" +
+                "Mobile Number: " + number + "\n" +
                 "Message: " + message
             );
 
