--- a/service.html
+++ b/service.html
@@ -226,10 +226,7 @@
                         aria-labelledby="pills-frontend-tab" tabindex="0">
 
                         <div class="tab-boxs">
-                            <p>At Befhue, we help you create unique logos that capture the personality of your brand in
-                                refined and precise ways. Designs are created to ensure clear, flexible, and durable
-                                impressions on all media platforms. Let us turn your brand name into a timeless
-                                visual identity.
+                            <p>Befhue is a creative agency specializing in graphic design and video editing services. We transform your ideas into visually stunning designs and engaging videos. Our team delivers high-quality, custom solutions to elevate your brand and captivate your audience.
                             </p>
 
                             <div class="tab-box-container mt-5">
@@ -257,10 +254,7 @@
                     <div class="tab-pane fade " id="pills-mobile" role="tabpanel" aria-labelledby="pills-mobile-tab"
                         tabindex="0">
                         <div class="tab-boxs">
-                            <p>At Befhue, we help you create unique logos that capture the personality of your brand in
-                                refined and precise ways. Designs are created to ensure clear, flexible, and durable
-                                impressions on all media platforms. Let us turn your brand name into a timeless
-                                visual identity.
+                            <p>Befhue is a creative agency specializing in graphic design and video editing services. We transform your ideas into visually stunning designs and engaging videos. Our team delivers high-quality, custom solutions to elevate your brand and captivate your audience.
                             </p>
 
                             <div class="tab-bigBox-container mt-5">
@@ -332,10 +326,7 @@
                         tabindex="0">
 
                         <div class="tab-boxs">
-                            <p>At Befhue, we help you create unique logos that capture the personality of your brand in
-                                refined and precise ways. Designs are created to ensure clear, flexible, and durable
-                                impressions on all media platforms. Let us turn your brand name into a timeless
-                                visual identity.
+                            <p>Befhue is a creative agency specializing in graphic design and video editing services. We transform your ideas into visually stunning designs and engaging videos. Our team delivers high-quality, custom solutions to elevate your brand and captivate your audience.
                             </p>
 
                             <div class="tab-box-container mt-5">
@@ -362,10 +353,7 @@
                     <div class="tab-pane fade" id="pills-cms" role="tabpanel" aria-labelledby="pills-cms-tab"
                         tabindex="0">
                         <div class="tab-boxs">
-                            <p>At Befhue, we help you create unique logos that capture the personality of your brand in
-                                refined and precise ways. Designs are created to ensure clear, flexible, and durable
-                                impressions on all media platforms. Let us turn your brand name into a timeless
-                                visual identity.
+                            <p>Befhue is a creative agency specializing in graphic design and video editing services. We transform your ideas into visually stunning designs and engaging videos. Our team delivers high-quality, custom solutions to elevate your brand and captivate your audience.
                             </p>
 
                             <div class="tab-splitBox-container">
@@ -421,10 +409,7 @@
                     <div class="tab-pane fade" id="pills-bro" role="tabpanel" aria-labelledby="pills-bro-tab"
                         tabindex="0">
                         <div class="tab-boxs">
-                            <p>At Befhue, we help you create unique logos that capture the personality of your brand in
-                                refined and precise ways. Designs are created to ensure clear, flexible, and durable
-                                impressions on all media platforms. Let us turn your brand name into a timeless
-                                visual identity.
+                            <p>Befhue is a creative agency specializing in graphic design and video editing services. We transform your ideas into visually stunning designs and engaging videos. Our team delivers high-quality, custom solutions to elevate your brand and captivate your audience.
                             </p>
 
                             <div class="tab-box-container mt-5">
@@ -448,10 +433,7 @@
                     <div class="tab-pane fade" id="pills-inter" role="tabpanel" aria-labelledby="pills-inter-tab"
                         tabindex="0">
                         <div class="tab-boxs">
-                            <p>At Befhue, we help you create unique logos that capture the personality of your brand in
-                                refined and precise ways. Designs are created to ensure clear, flexible, and durable
-                                impressions on all media platforms. Let us turn your brand name into a timeless
-                                visual identity.
+                            <p>Befhue is a creative agency specializing in graphic design and video editing services. We transform your ideas into visually stunning designs and engaging videos. Our team delivers high-quality, custom solutions to elevate your brand and captivate your audience.
                             </p>
 
                             <div class="tab-splitBox-container">
@@ -509,10 +491,7 @@
                     <div class="tab-pane fade" id="pills-soc" role="tabpanel" aria-labelledby="pills-soc-tab"
                         tabindex="0">
                         <div class="tab-boxs">
-                            <p>At Befhue, we help you create unique logos that capture the personality of your brand in
-                                refined and precise ways. Designs are created to ensure clear, flexible, and durable
-                                impressions on all media platforms. Let us turn your brand name into a timeless
-                                visual identity.
+                            <p>Befhue is a creative agency specializing in graphic design and video editing services. We transform your ideas into visually stunning designs and engaging videos. Our team delivers high-quality, custom solutions to elevate your brand and captivate your audience.
                             </p>
 
                             <div class="tab-box-container mt-5">
@@ -548,8 +527,15 @@
     <footer>
         <div class="footer-communicate ">
             <h3 style="color: white;">About befhue</h3>
-            <p>we’re your go to graphic design agency, turning your brand’s ideas into beautiful visual experiences. We
-                specialise in logo design, brand identity, web design, packaging design and digital marketing.</p>
+             <p>We’re graphic design and video editing agency, turning your
+                brand’s ideas into beautiful visual experiences. We
+                specialise in logo design, brand identity, web design,
+                packaging design and digital marketing. Our team of graphic
+                designers bring artistic talent and strategic thinking to every
+                design so it looks great and works for your business. We’re proud
+                of our quality and client satisfaction, delivering designs that speak
+                to your audience and raise your brand.</p>
+
 
         </div>
         <div class="footer-communicate">
@@ -685,7 +671,7 @@
             var formattedMessage = encodeURIComponent(
                 "Name: " + name + "\n" +
                 "Email: " + email + "\n" +
-                "Mobile Number: +" + number + "\n" +
+                "Mobile Number: " + number + "\n" +
                 "Message: " + message
             );
 
