--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,7 @@
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="pills-frontend-tab" data-bs-toggle="pill"
                             data-bs-target="#pills-frontend" type="button" role="tab" aria-controls="pills-frontend"
-                            aria-selected="false">Graphic Designs</button>
+                            aria-selected="false">Graphic Designing</button>
                     </li>
                     <li class="nav-item" role="presentation">
 
@@ -240,7 +240,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Corporate Video Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -249,7 +249,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Product Motion Graphics</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -258,7 +258,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Reels Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -267,7 +267,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Reels Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -276,7 +276,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Reels Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -378,7 +378,13 @@
                                             <span class="title-frame">Juoner</span>
                                         </div>
                                     </div>
-
+                                    <div class="iframe">
+                                        <iframe src="https://drive.google.com/file/d/1s1S5finzhkKXW4OwAhophUJPFLsYxKP7/preview"  allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
